src/css/index.css
@import "./variables/index.css";
@import "./fonts.css";

* {
	box-sizing: border-box;
}
html, body {
	margin: 0;
	padding: 0;
	height: 100%;
}

@import '../../node_modules/mozilla-tabzilla/css/tabzilla.css';

body {
	font-family: $baseFontFamily;
	@extend base-rhythm;
	color: $textColorPrimary;
	background: #fff;
	-webkit-text-size-adjust: 100%;
	display: flex;
	flex-direction: column;
}

a {
  color: $linkBlue;
  text-decoration: none;
  &:hover, &:focus, &:active {
    color: $linkBlue;
    text-decoration: underline;
  }
}

.row {
	display: block;
	@media (min-width: $breakDesktop) {
		display: block;
		justify-content: center;
	}
}
.row-inner {
	min-width: 300px;
	max-width: 1020px;
	margin: 0 auto;
	flex: 1;
	padding: calc($gutterY / 2) $gutterX;
}
header {
	background: $developerBlueVibrant;
}
header .row-inner {
	flex: 1;
	padding: 0 0 $gutterY $gutterX;
}
#tabzilla {
	display: none;
	@media (min-width: $breakTablet) {
		display: block;
	}
}
#title {
	display: flex;
	flex-direction: row;
	padding-top: calc($gutterY / 2);
	@media (min-width: $breakMobileLandscape) {
		padding-top: $gutterY;
	}
}
h1 {
	height: calc($gutterY * 2);
	width: calc($gutterY * 2);
	margin: 0;
	padding: 0;
	text-indent: -9999px;
	background-image: url('images/firefox.svg');
	background-repeat: no-repeat;
	background-size: contain;
	@media (min-width: $breakMobileLandscape) {
		height: calc($gutterY * 3);
		width: calc($gutterY * 3);
	}
}
h2 {
	margin: 0;
	color: #fff;
	margin-left: calc($gutterX);
	font-size: $h3FontSize;
	line-height: calc($gutterY * 2);
	font-weight: 300;
	letter-spacing: -.035em;
	@media (min-width: $breakMobileLandscape) {
		margin-left: calc($gutterX * 2);
		font-size: $h2FontSize;
		line-height: calc($gutterY * 1.5);
		@media (min-width: $breakTablet) {
			margin-left: calc($gutterX * 3);
		}
	}
	small {
		display: none;
		letter-spacing: normal;
		font-style: italic;
		font-weight: normal;
		color: $lightGray;
		font-size: $h4FontSize;
	  line-height: calc($gutterY * 1.5);
		@media (min-width: $breakMobileLandscape) {
			display: block;
		}
	}
}

article {
	background-color: #fff;
}

.search {
	text-align: center;
	font-weight: normal;
	margin: $gutterY 0;
	@media (min-width: $breakMobileLandscape) {
		display: flex;
		align-items: center;
		font-size: $h3FontSize;
		* + * {
			margin-left: $gutterX;
		}
	}
}
.search-input {
	font: inherit;
	font-weight: 300;
	flex: 1;
	width: 100%;
	padding: 0 $gutterX;
	line-height: 1.7em;
}
.results-meta {
	display: none;
	background: #eee;
	padding: calc($gutterY / 2) $gutterX;
}

#features {
	list-style: none;
	margin: calc($gutterY / 2) 0;
	padding: 0;
}

#features.searched {
	display: flex;
	flex-direction: column;
}
#features.searched .feature {
	display: none;
}
#features.searched .feature.match {
	display: block;
}

.feature {
	margin: 0 -$gutterX;
	padding: 0 $gutterX;
	@media (min-width: $breakMobileLandscape) {
		padding: calc($gutterY / 2) $gutterX;
	}
}
.feature:hover, .feature:focus {
	outline: none;
	background-color: $backgroundLightWarm;
}
.feature-header {
	position: relative;
}
.feature-title {
	@extend h5;
	padding-top: 0;
	margin-bottom: 0;
	line-height: calc($gutterY * 2);
	padding-right: $gutterX;
	font-weight: 600;
	@media (min-width: $breakMobileLandscape) {
		font-size: $h3FontSize;
		letter-spacing: -.035em;
		font-weight: 300;
		@media (min-width: $breakDesktopWide) {
			font-size: $h2FontSize;
		}
	}
}

.feature-anchor {
	display: inline-block;
	margin-left: calc(-$gutterX - $gutterX / 2);
	visibility: hidden;
	float: left;
	background-position: center;
	background-repeat: no-repeat;
	width: $gutterX;
	height: calc($gutterY * 2);
	background-image: url('images/anchor.svg');
	opacity: 0.4;
}
.feature:hover .feature-anchor {
	visibility: visible;
}

.feature-meta {
	display: none;
	padding: calc($gutterY / 2) 0 0;
	color: $textColorTertiary;
	@media (min-width: $breakMobileLandscape) {
		display: block;
	}
}
@media (max-width: $breakMobileLandscape) {
	.feature:focus .feature-meta {
		display: block;
	}
}
.feature-summary {
	margin: 0;
	padding-top: calc($gutterY / 2);
}
.feature-links {
	ul {
		list-style: none;
		padding: 0;
		display: flex;
		margin: 0;
		margin-right: calc($gutterX);
		@media (min-width: $breakMobileLandscape) {
			margin-right: 0;
		}
	}
	li {
		margin-right: calc($gutterX);
		&:last-child {
			margin-right: 0;
		}
		overflow: hidden;
		&.link-bug {
			flex: 1;
			text-align: right;
		}
	}
	a {
		color: $linkBlue;
		&:hover, &:focus, &:active {
			color: $linkBlue;
		}
	}
}
.icon {
	display: inline-block;
	background-position: bottom center;
	background-repeat: no-repeat;
	width: $gutterX;
	height: $gutterX;
	background-size: $gutterX;
	margin-right: calc($gutterX / 2);
}
.icon-spec {
	background-image: url('images/html5.png');
	@media (min-resolution: 2dppx) {
		background-image: url('images/html5@2x.png');
	}
}
.icon-mdn {
	background-image: url('images/mdn.png');
	@media (min-resolution: 2dppx) {
		background-image: url('images/mdn@2x.png');
	}
}
.icon-bugzilla {
	background-image: url('images/bugzilla.png');
	@media (min-resolution: 2dppx) {
		background-image: url('images/bugzilla@2x.png');
	}
}
.icon-caniuse {
	background-image: url('images/caniuse.png');
	@media (min-resolution: 2dppx) {
		background-image: url('images/caniuse@2x.png');
	}
}
.icon-samples {
	background-image: url('images/github.png');
	@media (min-resolution: 2dppx) {
		background-image: url('images/github@2x.png');
	}
}

.feature-status {
	position: absolute;
	right: 0;
	top: 0;
}

.feature-status ul {
	list-style: none;
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: row;
	height: calc($gutterY * 2);
	overflow: hidden;
}
/* ... */

